--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1937,6 +1937,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Federation of Domestic and Overseas Chinese</td>
+      <td>海内外华人华侨联合会</td>
+      <td>Jiangsu Office of Overseas Chinese Affairs</td>
+      <td>江苏省人民政府侨务办公室</td>
+      <td>Hong Kong</td>
+      <td>Arts and Culture, Economic Development, Education, International Relations/Exchange, Science and Technology, Sport</td>
+      <td>Jiangsu</td>
+      <td>2022-03-07</td>
+      <td>Anhui, Beijing, Chongqing, Fujian, Guangdong, Guangxi, Hainan, Jiangsu, Shanghai, Sichuan, Zhejiang</td>
+    </tr>
+    <tr>
       <td>Federation of German Industries (BDI)</td>
       <td>德国工业联合会</td>
       <td>Beijing Bureau of Commerce (formerly Beijing Commission of Commerce)</td>
@@ -2683,6 +2694,17 @@
       <td>Jiangsu</td>
       <td>2019-03-12</td>
       <td>Jiangsu</td>
+    </tr>
+    <tr>
+      <td>Hong Kong Chinese Industry &amp; Commerce Association</td>
+      <td>香港中华工商总会</td>
+      <td>Shanghai Hongqiao International Central Business District Management Committee</td>
+      <td>上海虹桥国际中央商务区管理委员会</td>
+      <td>Hong Kong</td>
+      <td>Trade/Industry Association</td>
+      <td>Shanghai</td>
+      <td>2022-03-08</td>
+      <td>China</td>
     </tr>
     <tr>
       <td>Hong Kong Federation of Youth Groups</td>
