--- a/viz/NSL/202105/arrest_venn_20210503.html
+++ b/viz/NSL/202105/arrest_venn_20210503.html
@@ -85,7 +85,7 @@ text-align:center;
 </style>
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src=".../venn.js"></script>
+<script src="../venn.js"></script>
 <script src="./arrest_venn_20210503.jsonp"></script>
 
 <script>
