--- a/viz/NSL/convictions_pie.html
+++ b/viz/NSL/convictions_pie.html
@@ -59,7 +59,7 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header">Individuals Convicted</div>
+	<div id="header">Convictions</div>
 	<div id="subhed">Individuals convicted, out of all individuals arrested</div>
   <div id="pieChart"></div>
   </div>
@@ -85,7 +85,7 @@ var pie = new d3pie("pieChart", {
 
 {
 "label": "Other arrests",
-"value": 171,
+"value": 173,
 "color": "#03798D"
 }
 
