--- a/viz/NSL/denied_bail_pie.html
+++ b/viz/NSL/denied_bail_pie.html
@@ -59,8 +59,8 @@ top:-80px; */
 <body>
 
   <div id="wrapper">
-	<div id="header">Individuals Denied Bail</div>
-	<div id="subhed">Individuals charged and denied bail by the court, out of all individuals charged</div>
+	<div id="header">Bail</div>
+	<div id="subhed">Individuals charged and denied bail, out of all individuals charged</div>
   <div id="pieChart"></div>
   </div>
 
@@ -79,12 +79,12 @@ var pie = new d3pie("pieChart", {
 		"content": [
 			{
 				"label": "Denied bail",
-				"value": 81,
+				"value": 83,
 				"color": "#686868"
 			},
 
 {
-"label": "Not denied bail",
+"label": "Granted Bail",
 "value": 29,
 "color": "#03798D"
 }
