--- a/viz/NSL/detention_length_bar.html
+++ b/viz/NSL/detention_length_bar.html
@@ -79,7 +79,7 @@ top:-80px; */
 <body>
 
 	<div id="wrapper">
-	<div id="header">Individuals' Length of Pre-Trial Detention, for Those Denied Bail</div>
+	<div id="header">Length of Pretrial Detention for Individuals Denied Bail</div>
   <div id="chart"></div>
   </div>
 
@@ -231,8 +231,8 @@ d3.csv("detention_lengths.csv", function(error, data) {
 });
 
 
-d3.select("#chart").append("div")
-    .attr("class", "footnote")
-    .html("<em>PLACEHOLDER LANGUAGE IN CASE WE WANT THIS FOOTNOTE HERE.</em>");
+// d3.select("#chart").append("div")
+//     .attr("class", "footnote")
+//     .html("<em>PLACEHOLDER LANGUAGE IN CASE WE WANT THIS FOOTNOTE HERE.</em>");
 
 </script>
