--- a/arrests_foreign_pie.html
+++ b/arrests_foreign_pie.html
@@ -60,7 +60,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Individuals Targeted Due to Foreign Interactions</div>
-	<div id="subhed">People arrested for violating the NSL or by the NSD, who were likely targeted based on their interactions with foreign entities</div>
+	<div id="subhed">People arrested by the NSD, who were likely targeted based on their interactions with foreign entities</div>
   <div id="pieChart"></div>
   </div>
 
@@ -79,13 +79,13 @@ var pie = new d3pie("pieChart", {
 		"content": [
 			{
 	"label": "Targeted individuals",
-	"value": 17,
+	"value": 23,
 	"color": "#686868"
 },
 
 {
 "label": "Other arrests",
-"value": 101,
+"value": 160,
 "color": "#03798D"
 }
 
