--- a/arrests_speech_pie.html
+++ b/arrests_speech_pie.html
@@ -60,7 +60,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Arrests for Speech Crimes</div>
-	<div id="subhed">Arrests for “seditious” or “secessionist” speech or materials, in comparison with other NSL violations or NSD arrests</div>
+	<div id="subhed">Arrests for “seditious” or “secessionist” speech or materials, in comparison with other NSD arrests</div>
   <div id="pieChart"></div>
   </div>
 
@@ -72,25 +72,25 @@ var pie = new d3pie("pieChart", {
 	"size": {
 		"canvasWidth": 400,
 		"canvasHeight": 330,
-		"pieOuterRadius": "30%"
+		"pieOuterRadius": "26%"
 	},
 	"data": {
 		// "sortOrder": "value-desc",
 		"content": [
 			{
 				"label": "Speech and other crimes",
-				"value": 14,
+				"value": 17,
 				"color": "#877F6A"
 			},
 			{
 	"label": "Only speech crimes",
-	"value": 15,
+	"value": 42,
 	"color": "#686868"
 },
 
 {
 "label": "Other arrests",
-"value": 89,
+"value": 124,
 "color": "#03798D"
 }
 
