--- a/arrests_subversion_pie.html
+++ b/arrests_subversion_pie.html
@@ -60,7 +60,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Arrests for Subversion</div>
-	<div id="subhed">Arrests for inciting, abetting, or committing subversion, in comparison with other NSL violations or NSD arrests</div>
+	<div id="subhed">Arrests for inciting, abetting, or committing subversion, in comparison with other NSD arrests</div>
   <div id="pieChart"></div>
   </div>
 
@@ -79,13 +79,13 @@ var pie = new d3pie("pieChart", {
 		"content": [
 			{
 				"label": "Subversion",
-				"value": 60,
+				"value": 69,
 				"color": "#877F6A"
 			},
 
 {
 "label": "Other arrests",
-"value": 58,
+"value": 114,
 "color": "#03798D"
 }
 
