--- a/arrests_month.html
+++ b/arrests_month.html
@@ -86,12 +86,12 @@
 <body>
 	<div id="wrapper">
 	<div id="header">Arrests by Month</div>
-	<div id="subhed">Individuals arrested for violating the NSL and individuals arrested by the NSD without invocation of the NSL</div>
+	<div id="subhed">Individuals arrested by the NSD</div>
     <div id="graphic"></div>
 
     <script>
 
-var data = [{"month":"May 2021","arrests":5},{"month":"April 2021","arrests":2},{"month":"March 2021","arrests":1},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":68},{"month":"December 2020","arrests":3},{"month":"November 2020","arrests":4},{"month":"October 2020","arrests":2},{"month":"September 2020","arrests":6},{"month":"August 2020","arrests":10},{"month":"July 2020","arrests":15}];
+var data = [{"month":"March 2022","arrests":2},{"month":"February 2022","arrests":5},{"month":"January 2022","arrests":0},{"month":"December 2021","arrests":7},{"month":"November 2021","arrests":0},{"month":"October 2021","arrests":2},{"month":"September 2021","arrests":12},{"month":"August 2021","arrests":4},{"month":"July 2021","arrests":20},{"month":"June 2021","arrests":7},{"month":"May 2021","arrests":5},{"month":"April 2021","arrests":2},{"month":"March 2021","arrests":1},{"month":"February 2021","arrests":2},{"month":"January 2021","arrests":68},{"month":"December 2020","arrests":8},{"month":"November 2020","arrests":4},{"month":"October 2020","arrests":3},{"month":"September 2020","arrests":6},{"month":"August 2020","arrests":10},{"month":"July 2020","arrests":15}];
 
         //set up svg using margin conventions - we'll need plenty of room on the left for labels
         var margin = {
@@ -170,7 +170,7 @@ var data = [{"month":"May 2021","arrests":5},{"month":"April 2021","arrests":2},
 
 d3.select("body").append("div")
     .attr("class", "footnote")
-    .html("<em>Total individuals arrested: 118<br>For people arrested multiple times, only the first arrest is counted here.</em>");
+    .html("<em>Total individuals arrested: 183<br>For people arrested multiple times, only the first arrest is counted here.</em>");
 
 
     </script>
