--- a/viz/NSL/NSL_table_final.html
+++ b/viz/NSL/NSL_table_final.html
@@ -74,9 +74,11 @@
 <div id="header">Individuals Arrested under the Hong Kong National Security Law or by the National Security Department</div>
 
 
-<div id="subhed">Note: All offenses detailed here derive from Hong Kong government allegations and neither the researchers nor ChinaFile’s editors have independently verified them. <br>
-	<br> Data cut-off date: March 28, 2022<br>
-	<br>To filter this table, type your search term(s) in the fields above the columns. You can filter multiple columns simultaneously.
+<div id="subhed">Notes:<br>
+<ul><li>All offenses detailed here derive from Hong Kong government allegations and neither the researchers nor ChinaFile’s editors have independently verified them.</li>
+<li>In this table, the term "sedition" can refer to a range of crimes as prescribed in section 10 of the Crimes Ordinance, including but not limited to "utterance of seditious words," and "conspiracy to publish seditious materials."</li></ul>
+Data cut-off date: March 28, 2022<br>
+<br>To filter this table, type your search term(s) in the fields above the columns. You can filter multiple columns simultaneously.
 </div>
 	<table id="filter" class="sortable">
 
