--- a/viz/NSL/NSL_table_final_plain.html
+++ b/viz/NSL/NSL_table_final_plain.html
@@ -20,7 +20,7 @@
 				margin-right:15px;
 				margin-bottom:15px;
 				margin-top:15px;
-				text-align:center;
+				/* text-align:center; */
 				vertical-align: text-top;
 			}
 
@@ -77,7 +77,15 @@
 	<body>
 
 <div id="header">Individuals Arrested by the National Security Department</div>
-<div id="subhed">Note: All offenses detailed here derive from Hong Kong government allegations and neither the authors of this article nor ChinaFile’s editors have independently verified them.<br><br>Total number of arrests: 183<br><br>Data cut-off date: March 28, 2022</div>
+<div id="subhed">
+
+Notes:<br>
+<ul><li>All offenses detailed here derive from Hong Kong government allegations and neither the researchers nor ChinaFile’s editors have independently verified them.</li>
+<li>In this table, the term "sedition" can refer to a range of crimes as prescribed in section 10 of the Crimes Ordinance, including but not limited to "utterance of seditious words," and "conspiracy to publish seditious materials."</li></ul>
+Total number of arrests: 183<br>
+<br>Data cut-off date: March 28, 2022</div>
+
+
 	<table class="tableizer-table">
 
 	<!–– add your tableizer data below this line, removing table class=tableizer-table and tr class=tableizer-firstrow ––>
