--- a/viz/NSL/charges_venn_20220328.html
+++ b/viz/NSL/charges_venn_20220328.html
@@ -84,7 +84,7 @@ text-align:center;
 
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="../venn.js"></script>
-<script src="./charges_venn_20220328.jsonp"></script>
+<script src="./charges_venn.jsonp"></script>
 
 <script>
 
