--- a/viz/NSL/detention_length_bar_20220328.html
+++ b/viz/NSL/detention_length_bar_20220328.html
@@ -118,7 +118,7 @@ var svg = d3.select("#chart").append("svg")
   .append("g")
     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-d3.csv("detention_lengths_20220328.csv", function(error, data) {
+d3.csv("detention_lengths.csv", function(error, data) {
   if (error) throw error;
 
   var ageNames = d3.keys(data[0]).filter(function(key) { return key !== "State"; });
