--- a/viz/NSL/NSL_table_final_20220328.html
+++ b/viz/NSL/NSL_table_final_20220328.html
@@ -76,7 +76,7 @@
 
 <div id="subhed">Notes:<br>
 <ul><li>All offenses detailed here derive from Hong Kong government allegations and neither the researchers nor ChinaFile’s editors have independently verified them.</li>
-<li>In this table, the term "sedition" can refer to a range of crimes as prescribed in section 10 of the Crimes Ordinance, including but not limited to "utterance of seditious words," and "conspiracy to publish seditious materials."</li></ul>
+<li>In this table, the term &#8220;sedition&#8221; refers to a range of related crimes that are prescribed in Section 10 of the Crimes Ordinance, including but not limited to &#8220;utterance of seditious words&#8221; and &#8220;conspiracy to publish seditious materials.&#8221;</li></ul>
 Data cut-off date: March 28, 2022<br>
 <br>To filter this table, type your search term(s) in the fields above the columns. You can filter multiple columns simultaneously.
 </div>
