--- a/viz/NSL/NSL_table_final_plain_20220328.html
+++ b/viz/NSL/NSL_table_final_plain_20220328.html
@@ -81,7 +81,7 @@
 
 Notes:<br>
 <ul><li>All offenses detailed here derive from Hong Kong government allegations and neither the researchers nor ChinaFile’s editors have independently verified them.</li>
-<li>In this table, the term "sedition" can refer to a range of crimes as prescribed in section 10 of the Crimes Ordinance, including but not limited to "utterance of seditious words," and "conspiracy to publish seditious materials."</li></ul>
+<li>In this table, the term &#8220;sedition&#8221; refers to a range of related crimes that are prescribed in Section 10 of the Crimes Ordinance, including but not limited to &#8220;utterance of seditious words&#8221; and &#8220;conspiracy to publish seditious materials.&#8221;</li></ul>
 Total number of arrests: 183<br>
 <br>Data cut-off date: March 28, 2022</div>
 
