--- a/viz/NSL/arrests_foreign_pie.html
+++ b/viz/NSL/arrests_foreign_pie.html
@@ -60,7 +60,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Individuals Targeted Due to Foreign Interactions</div>
-	<div id="subhed">People arrested by the NSD, who were likely targeted based on their interactions with foreign entities</div>
+	<div id="subhed">People arrested by the NSD or under the NSL, who were likely targeted based on their interactions with foreign entities</div>
   <div id="pieChart"></div>
   </div>
 
