--- a/viz/NSL/arrests_month.html
+++ b/viz/NSL/arrests_month.html
@@ -86,7 +86,7 @@
 <body>
 	<div id="wrapper">
 	<div id="header">Arrests by Month</div>
-	<div id="subhed">Individuals arrested by the NSD</div>
+	<div id="subhed">Individuals arrested by the NSD or under the NSL</div>
     <div id="graphic"></div>
 
     <script>
