--- a/viz/NSL/charges_month.html
+++ b/viz/NSL/charges_month.html
@@ -85,7 +85,7 @@
 <body>
 	<div id="wrapper">
 	<div id="header">Charges by Month</div>
-	<div id="subhed">Individuals arrested and charged by the NSD</div>
+	<div id="subhed">Individuals arrested and charged by the NSD or under the NSL</div>
     <div id="graphic"></div>
 
     <script>
