--- a/viz/NSL/arrests_charges_pie_20220328.html
+++ b/viz/NSL/arrests_charges_pie_20220328.html
@@ -60,7 +60,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Charged Individuals</div>
-	<div id="subhed">Individuals arrested by the NSD who have since been charged, out of all individuals arrested</div>
+	<div id="subhed">Individuals arrested by the NSD or under the NSL who have since been charged, out of all individuals arrested</div>
   <div id="pieChart"></div>
   </div>
 
