--- a/viz/NSL/arrests_speech_pie.html
+++ b/viz/NSL/arrests_speech_pie.html
@@ -60,7 +60,7 @@ top:-80px; */
 
   <div id="wrapper">
 	<div id="header">Arrests for Speech Crimes</div>
-	<div id="subhed">Arrests for “seditious” or “secessionist” speech or materials, in comparison with other NSD arrests</div>
+	<div id="subhed">Arrests for “seditious” or “secessionist” speech or materials, in comparison with other arrests by the NSD or under the NSL</div>
   <div id="pieChart"></div>
   </div>
 
