--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -1139,7 +1139,7 @@
       <td>Chongqing Commission of Commerce</td>
       <td>重庆市商务委员会</td>
       <td>Myanmar</td>
-      <td>Arts and Culture, Media, Tourism, Trade/Industry Association</td>
+      <td>Arts and Culture, Economic Development, International Relations/Exchange, Media, Tourism, Trade/Industry Association</td>
       <td>Chongqing</td>
       <td>2022-02-16</td>
       <td>China</td>
@@ -3675,6 +3675,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>Jubilee Cares Limited</td>
+      <td>禧福乐华有限公司</td>
+      <td>Henan Department of Education</td>
+      <td>河南省教育厅</td>
+      <td>Hong Kong</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>Henan</td>
+      <td>2022-04-25</td>
+      <td>Henan</td>
+    </tr>
+    <tr>
       <td>Junior Achievement China</td>
       <td>中国国际青年成就</td>
       <td>Chinese People’s Association for Friendship with Foreign Countries</td>
@@ -4197,7 +4208,7 @@
       <td>Ministry of Industry and Information Technology</td>
       <td>工业和信息化部</td>
       <td>Singapore</td>
-      <td>Trade/Industry Association</td>
+      <td>Energy, Trade/Industry Association</td>
       <td>Beijing</td>
       <td>2022-02-14</td>
       <td>China</td>
