--- a/index_RO_table.html
+++ b/index_RO_table.html
@@ -2245,6 +2245,17 @@
       <td>China</td>
     </tr>
     <tr>
+      <td>German-Chinese Association Zhejiang Liaison Office</td>
+      <td>德国德中协会浙江联络处</td>
+      <td>Zhejiang People’s Association for Friendship with Foreign Countries</td>
+      <td>浙江省人民对外友好协会</td>
+      <td>Germany</td>
+      <td>Arts and Culture, Economic Development, Education, International Relations/Exchange, Science and Technology</td>
+      <td>Zhejiang</td>
+      <td>2022-05-13</td>
+      <td>China</td>
+    </tr>
+    <tr>
       <td>Gifu Industry and Economy Revitalization Center</td>
       <td>日本公益财团法人岐阜县产业经济振兴中心</td>
       <td>Shanghai Commission of Commerce</td>
@@ -3980,6 +3991,17 @@
       <td>Trade/Industry Association</td>
       <td>Shanghai</td>
       <td>2017-09-18</td>
+      <td>China</td>
+    </tr>
+    <tr>
+      <td>La Leche League International</td>
+      <td>国际母乳会</td>
+      <td>Chongqing Health Commission (formerly Chongqing Health and Family Planning Commission)</td>
+      <td>重庆市卫生健康委员会</td>
+      <td>United States</td>
+      <td>Civil Society Capacity-Building, Health, Youth</td>
+      <td>Chongqing</td>
+      <td>2022-05-06</td>
       <td>China</td>
     </tr>
     <tr>
