--- a/index_TA_table.html
+++ b/index_TA_table.html
@@ -5512,6 +5512,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Botanic Gardens Conservation International (BGCI)</td>
+      <td>国际植物园保护联盟</td>
+      <td>United Kingdom</td>
+      <td>Comprehensive Protection of the Critically Endangered Pingba Maple Species in Guizhou</td>
+      <td>贵州极危物种平坝槭的综合保护</td>
+      <td>Guizhou Province</td>
+      <td>贵州省</td>
+      <td>Environment</td>
+      <td>2022-04-30</td>
+      <td>2022-12-31</td>
+      <td>Guizhou Botanical Garden</td>
+      <td>贵州省植物园</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>BRACE</td>
       <td>BRACE</td>
       <td>Unknown</td>
@@ -8997,6 +9014,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Chan Cheung Mun Chung Charitable Fund Limited</td>
+      <td>陈张敏聪夫人慈善基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Funding for Phase 2 of Building Earthquake-Reistant Buildings and Special Homes after the Sichuan Earthquake</td>
+      <td>四川地震灾后建第二期竹结构抗震房屋及特殊家庭资助</td>
+      <td>Sichuan Province</td>
+      <td>四川省</td>
+      <td>Disaster Relief, Infrastructure</td>
+      <td>2022-05-09</td>
+      <td>2022-10-31</td>
+      <td>Chongqing Jiaotong University Education Development Foundation</td>
+      <td>重庆交通大学教育发展基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>直接登记</td>
+    </tr>
+    <tr>
       <td>Chan Dang Social Services Foundation</td>
       <td>陈登社会服务基金会有限公司</td>
       <td>Hong Kong</td>
@@ -9024,6 +9058,23 @@
       <td>Arts and Culture, Youth</td>
       <td>2021-06-15</td>
       <td>2022-05-31</td>
+      <td>Foshan City, Shunde District Qichuang Youth Social Work Service Center</td>
+      <td>佛山市顺德区启创青少年社工服务中心</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Shunde District Communist Youth League Committee</td>
+      <td>共青团顺德区委员会</td>
+    </tr>
+    <tr>
+      <td>Chan Dang Social Services Foundation</td>
+      <td>陈登社会服务基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Chen Dang Youth Creative Arts Cultivation Program “Myriad Dreams Classroom”</td>
+      <td>陈登青年创艺培育计划“多元梦想课堂”</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Arts and Culture, Youth</td>
+      <td>2022-06-01</td>
+      <td>2023-05-31</td>
       <td>Foshan City, Shunde District Qichuang Youth Social Work Service Center</td>
       <td>佛山市顺德区启创青少年社工服务中心</td>
       <td>Non-Profit or Foundation</td>
@@ -9556,6 +9607,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Shanghai City, Jing'an District Communist Youth League Committee</td>
       <td>共青团上海市静安区委员会</td>
+    </tr>
+    <tr>
+      <td>Chen Yet-Sen Family Foundation</td>
+      <td>陈一心家族慈善基金有限公司</td>
+      <td>Hong Kong</td>
+      <td>“Stone Soup Happy Reading Alliance” Program to Build a Campus Reading Culture</td>
+      <td>“石头汤悦读校园联盟”校园阅读文化建设项目</td>
+      <td>Anhui Province</td>
+      <td>安徽省</td>
+      <td>Education</td>
+      <td>2022-05-16</td>
+      <td>2023-03-31</td>
+      <td>Doers Cultural &amp; Education Foundation</td>
+      <td>安徽实践家文教慈善基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Anhui Province Department of Civil Affairs</td>
+      <td>安徽省民政厅</td>
     </tr>
     <tr>
       <td>Chey Institute for Advanced Studies</td>
@@ -12601,6 +12669,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>CLASP</td>
+      <td>电器能效组织</td>
+      <td>United States</td>
+      <td>Cooperative Research Project on Energy Efficiency Standards and Labeling of Household Appliances</td>
+      <td>家用电器能效标准与标识合作研究项目</td>
+      <td>Beijing City</td>
+      <td>北京市</td>
+      <td>Energy, Environment</td>
+      <td>2022-04-15</td>
+      <td>2022-06-30</td>
+      <td>China National Institute of Standardization</td>
+      <td>中国标准化研究院</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Clean Air Asia</td>
       <td>亚洲清洁空气中心</td>
       <td>The Philippines</td>
@@ -14491,7 +14576,7 @@
       <td>EAT</td>
       <td>EAT基金会</td>
       <td>Norway</td>
-      <td>Reducing Nitrogen Losses in China's Food System: 2060 Carbon Neutrality Target Coordinated Efficiencies</td>
+      <td>Reducing Nitrogen Losses in China’s Food System: 2060 Carbon Neutrality Target Coordinated Efficiencies</td>
       <td>减少中国食物系统氮损失：2060碳中和目标协同效益</td>
       <td>Zhejiang Province</td>
       <td>浙江省</td>
@@ -19707,6 +19792,23 @@
       <td>Unknown</td>
     </tr>
     <tr>
+      <td>General Association of Macau Yang Jiang Associations</td>
+      <td>澳门阳江社团总会</td>
+      <td>Macau</td>
+      <td>Going to Yangjiang City Red Cross Association to Conduct Activities</td>
+      <td>澳门阳江社团总会赴阳江市红十字会开展活动</td>
+      <td>Guangdong Province</td>
+      <td>广东省</td>
+      <td>Unknown</td>
+      <td>2022-03-10</td>
+      <td>2022-06-30</td>
+      <td>Yangjiang City Red Cross Association</td>
+      <td>阳江市红十字会</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
       <td>Georgia China Friendship Cooperation Association</td>
       <td>格鲁吉亚-中国友好协会</td>
       <td>Georgia</td>
@@ -24671,6 +24773,91 @@
       <td>教育部</td>
     </tr>
     <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Pingjiang County High School Financial Aid Program</td>
+      <td>平江县高中助学项目</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Poverty Alleviation, Youth</td>
+      <td>2022-03-31</td>
+      <td>2022-12-31</td>
+      <td>Hunan Province, Pingjiang County Bureau of Education</td>
+      <td>湖南省平江县教育局</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Subsidies for Especially Impoverished Students in Pingjiang County to Attend University</td>
+      <td>香港慈恩基金会资助平江县优困生上大学</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2022-07-01</td>
+      <td>2023-06-30</td>
+      <td>Hunan Province, Pingjiang County Bureau of Education</td>
+      <td>湖南省平江县教育局</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Huojia County Construction Assistance for Dongyuan Elementary School Building</td>
+      <td>获嘉县援建东苑小学教学楼</td>
+      <td>Henan Province</td>
+      <td>河南省</td>
+      <td>Education, Infrastructure, Youth</td>
+      <td>2022-05-01</td>
+      <td>2022-12-30</td>
+      <td>Huojia County Dongyuan Elementary School</td>
+      <td>获嘉县东苑小学</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Huojia County Construction Assistance for Huojia County, Zhonghe Town Beijie School Building</td>
+      <td>获嘉县援建获嘉县中和镇北街学校教学楼</td>
+      <td>Henan Province</td>
+      <td>河南省</td>
+      <td>Education, Infrastructure, Youth</td>
+      <td>2022-05-01</td>
+      <td>2022-12-30</td>
+      <td>Huojia County, Zhonghe Town Beijie School</td>
+      <td>获嘉县中和镇北街学校</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
+      <td>Grace Charity Foundation Limited</td>
+      <td>慈恩基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Huojia County Construction Assistance for Xinhua Kindergarten Building</td>
+      <td>获嘉县援建新华幼儿园教学楼</td>
+      <td>Henan Province</td>
+      <td>河南省</td>
+      <td>Education, Infrastructure, Youth</td>
+      <td>2022-05-01</td>
+      <td>2022-12-30</td>
+      <td>Huojia County Xinhua Kindergarten</td>
+      <td>获嘉县新华幼儿园</td>
+      <td>School, College, University, or Training Institution</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Gratia Foundation</td>
       <td>华恩基金会</td>
       <td>Hong Kong</td>
@@ -25242,6 +25429,23 @@
       <td>Environment, International Relations/Exchange</td>
       <td>2021-08-10</td>
       <td>2022-06-09</td>
+      <td>Beijing Forestry Society</td>
+      <td>北京林学会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Beijing Municipal Forestry and Parks Bureau</td>
+      <td>北京市园林绿化局</td>
+    </tr>
+    <tr>
+      <td>Green Earth Network</td>
+      <td>绿色地球网络</td>
+      <td>Japan</td>
+      <td>Sino-Japanese Afforestation International United Project</td>
+      <td>中日植树造林国际联合事业项目</td>
+      <td>Hebei Province</td>
+      <td>河北省</td>
+      <td>Environment, International Relations/Exchange</td>
+      <td>2022-06-10</td>
+      <td>2023-06-09</td>
       <td>Beijing Forestry Society</td>
       <td>北京林学会</td>
       <td>Non-Profit or Foundation</td>
@@ -43456,6 +43660,23 @@
       <td>Unknown</td>
     </tr>
     <tr>
+      <td>MISEREOR Foundation</td>
+      <td>德国米苏尔社会发展基金会</td>
+      <td>Germany</td>
+      <td>Implementation of Biodiversity Conservation and Environmental Sanitation in Nangqian County, Dongba Township, Jisai Village</td>
+      <td>关于实施囊谦县东坝乡吉赛村生物多样性保护与环境卫生</td>
+      <td>Qinghai Province</td>
+      <td>青海省</td>
+      <td>Environment, Health</td>
+      <td>2022-05-01</td>
+      <td>2023-04-30</td>
+      <td>The Jinpa Project</td>
+      <td>玉树州金巴慈善会</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+      <td>Unknown</td>
+    </tr>
+    <tr>
       <td>Mizutani Foundation for Glycoscience</td>
       <td>日本水谷糖科学基金会</td>
       <td>Japan</td>
@@ -46378,6 +46599,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Nitori International Scholarship Foundation</td>
+      <td>公益财团法人 似鸟国际奖学金财团</td>
+      <td>Japan</td>
+      <td>Suzhou University NITORI International Scholarship</td>
+      <td>苏州大学NITORI国际奖学金</td>
+      <td>Jiangsu Province</td>
+      <td>江苏省</td>
+      <td>Education, International Relations/Exchange</td>
+      <td>2022-04-20</td>
+      <td>2022-12-31</td>
+      <td>Suzhou University Education Development Foundation</td>
+      <td>苏州大学教育发展基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Jiangsu Department of Education</td>
+      <td>江苏省教育厅</td>
     </tr>
     <tr>
       <td>Noordhoff Craniofacial Foundation</td>
@@ -53027,6 +53265,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Sin Kai Funds Limited</td>
+      <td>善启慈善基金会</td>
+      <td>Hong Kong</td>
+      <td>2021 Dafang County Compassionate Activity</td>
+      <td>香港善启慈善基金会2021年大方县爱心活动</td>
+      <td>Guizhou Province</td>
+      <td>贵州省</td>
+      <td>Poverty Alleviation</td>
+      <td>2021-07-13</td>
+      <td>2022-07-13</td>
+      <td>Dafang County Communist Youth League Committee</td>
+      <td>共青团大方县委</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Sin Meng Charity Association</td>
       <td>善明会</td>
       <td>Macau</td>
@@ -53450,6 +53705,23 @@
       <td>Non-Profit or Foundation</td>
       <td>Unknown</td>
       <td>Unknown</td>
+    </tr>
+    <tr>
+      <td>Sir Horace Kadoorie Youth Development Foundation</td>
+      <td>贺理士嘉道理爵士青年发展基金会</td>
+      <td>Hong Kong</td>
+      <td>Jiahe Good Teacher Good Friend</td>
+      <td>嘉和良师益友</td>
+      <td>Shanghai City</td>
+      <td>上海市</td>
+      <td>Youth</td>
+      <td>2021-09-01</td>
+      <td>2022-08-31</td>
+      <td>Shanghai K Charitable Foundation</td>
+      <td>上海嘉和公益基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Unknown</td>
+      <td>直接登记</td>
     </tr>
     <tr>
       <td>Social Workers Across Borders</td>
@@ -66627,6 +66899,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Wetlands International</td>
+      <td>湿地国际</td>
+      <td>The Netherlands</td>
+      <td>Program to Protect Wetlands and Migratory Bird Routes over the Yellow Sea</td>
+      <td>中国黄海迁飞路线湿地保护项目</td>
+      <td>Beijing City / Liaoning Province / Jiangsu Province</td>
+      <td>北京市,辽宁省,江苏省</td>
+      <td>Animal Protection, Environment</td>
+      <td>2022-05-25</td>
+      <td>2022-12-31</td>
+      <td>National Forestry and Grassland Administration Survey and Planning Institute</td>
+      <td>国家林业和草原局调查规划设计院</td>
+      <td>Party or Government Entity</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Wheelchair and Friendship Center of Asia</td>
       <td>亚洲轮椅交流中心</td>
       <td>Unknown</td>
@@ -69262,6 +69551,23 @@
       <td>Not Applicable</td>
     </tr>
     <tr>
+      <td>Yale-China Association</td>
+      <td>雅礼协会</td>
+      <td>United States</td>
+      <td>Fourth Annual Meeting for the Chia Scholarship in Xiangxi</td>
+      <td>第四届湘西贾氏奖学金年会</td>
+      <td>Hunan Province</td>
+      <td>湖南省</td>
+      <td>Education, Health</td>
+      <td>2022-05-22</td>
+      <td>2022-05-22</td>
+      <td>Fenghuang County People's Hospital</td>
+      <td>凤凰县人民医院</td>
+      <td>Hospital or Medical Center</td>
+      <td>Not Applicable</td>
+      <td>Not Applicable</td>
+    </tr>
+    <tr>
       <td>Yan Fung Tung Buddhist and Taoist Society Limited</td>
       <td>仁枫洞佛道社有限公司</td>
       <td>Hong Kong</td>
@@ -70588,6 +70894,40 @@
       <td>教育部</td>
     </tr>
     <tr>
+      <td>Zhejiang University (Hong Kong) Education Fund Limited</td>
+      <td>香港浙江大学教育基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Zhejiang University “John Tung History of Eastern Literature and Philosophy Research Award Fund”</td>
+      <td>浙江大学 “董氏东方文史哲研究奖励基金”</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Arts and Culture, Education</td>
+      <td>2022-05-20</td>
+      <td>2023-05-19</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
+      <td>Zhejiang University (Hong Kong) Education Fund Limited</td>
+      <td>香港浙江大学教育基金会有限公司</td>
+      <td>Hong Kong</td>
+      <td>Zhejiang University “Shenhe Student Financial Aid Fund”</td>
+      <td>浙江大学“申和助学金”</td>
+      <td>Zhejiang Province</td>
+      <td>浙江省</td>
+      <td>Education, Poverty Alleviation</td>
+      <td>2022-04-22</td>
+      <td>2023-04-21</td>
+      <td>Zhejiang University Education Foundation</td>
+      <td>浙江大学教育基金会</td>
+      <td>Non-Profit or Foundation</td>
+      <td>Ministry of Education</td>
+      <td>教育部</td>
+    </tr>
+    <tr>
       <td>Zhejiang University Education Foundation (USA)</td>
       <td>浙江大学（美国）教育基金会</td>
       <td>United States</td>
@@ -71305,7 +71645,7 @@
       <td>Zhu Jia Charity Association</td>
       <td>筑家慈善会</td>
       <td>Macau</td>
-      <td>Hui'ai Zhu Jia · Nanhai</td>
+      <td>Hui’ai Zhu Jia · Nanhai</td>
       <td>汇爱筑家·南海</td>
       <td>Guangdong Province</td>
       <td>广东省</td>
@@ -71373,11 +71713,11 @@
       <td>Zoological Society of London (ZSL)</td>
       <td>英国伦敦动物学会</td>
       <td>United Kingdom</td>
-      <td>Project to Develop the Expansion Model of Gansu Province's Chinese Giant Salamander Conservation</td>
+      <td>Project to Develop the Expansion Model of Gansu Province’s Chinese Giant Salamander Conservation</td>
       <td>甘肃省中国大鲵保护可扩展模式开发项目</td>
       <td>Gansu Province</td>
       <td>甘肃省</td>
-      <td>Animal Protection</td>
+      <td>Animal Protection, Environment</td>
       <td>2021-09-15</td>
       <td>2022-05-20</td>
       <td>Gansu "Green Camel Bell" Environment and Development Center</td>
